In Progress
-----------

05/09/2020 Experimental support for EBNF choices.  For example:

	      @('term { PLUS|MINUS term }')
              def expr(self, p):
                  lterm = p.pterm0
                  for op, rterm in p[1]:
		      lterm = BinOp(op, lterm, rterm)

           One issue here is just how one refers to the choice
           of values.  There is no unified name to pick. So,
           you basically have to do it using a numeric index like p[1].
           In this case, p[1] is a list of all of the repeated items
           (represented as tuples).

05/09/2020 Changed the internal names used for EBNF rules to make them
           a bit easier to debug in the parser.out file.

Version 0.4
-----------

03/06/2020 Added experimental support for EBNF repetition and optional
           syntax.  For example, here is a rule for a comma-separated
           expression list:

               @('expr { COMMA expr }')
               def exprlist(self, p):
                   return [ p.expr0 ] + p.expr1

           In this code, the { ... } means zero-or-more repetitions.
           It turns all symbols inside into lists.  So, instead of
           representing a single value, p.expr1 is now a list of 
           values.  

           An optional value can be enclosed in brackets like this:

              @('VAR NAME [ EQUAL expr ] SEMI')
              def variable_declaration(self, p):
                  print(f"Definining {p.NAME}. Initial value={p.expr}")

           In this case, all symbols inside [ ... ] either have a value
           if present or are assigned to None if missing.

           In both cases, you continue to use the same name indexing
           scheme used by the rest of SLY.  For example, in the first
           example above, you use "expr0" and "expr1" to refer to the
           different "expr" symbols since that name appears in more
           than one place.

04/09/2019 Fixed very mysterious error message that resulted if you 